log/build_2026-04-25_18-14-10/tensorrt_detect/stderr.log
CMake Deprecation Warning at /home/delphine/open3d-devel-linux-x86_64-cxx11-abi-cuda-0.19.0/lib/cmake/Open3D/Open3DConfig.cmake:18 (cmake_policy):
  The OLD behavior for policy CMP0072 will be removed from a future version
  of CMake.

  The cmake-policies(7) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack (most recent call first):
  CMakeLists.txt:28 (find_package)


/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/map_node.cpp: In member function ‘void MapNode::target_callback(tensorrt_detect_msgs::msg::WorldTargetArray_<std::allocator<void> >::SharedPtr)’:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/map_node.cpp:111:24: error: ‘using std::__shared_ptr_access<tensorrt_detect_msgs::msg::RadarMap_<std::allocator<void> >, __gnu_cxx::_S_atomic, false, false>::element_type = struct tensorrt_detect_msgs::msg::RadarMap_<std::allocator<void> >’ {aka ‘struct tensorrt_detect_msgs::msg::RadarMap_<std::allocator<void> >’} has no member named ‘header’
  111 |             radar_msg->header = msg->header;
      |                        ^~~~~~
gmake[2]: *** [CMakeFiles/map_node.dir/build.make:76：CMakeFiles/map_node.dir/src/nodes/map_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:305：CMakeFiles/map_node.dir/all] 错误 2
gmake[1]: *** 正在等待未完成的任务....
gmake: *** [Makefile:146：all] 错误 2
